--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "rebass": "^3.0.1",
     "styled-components": "^4.1.3",
-    "styled-system": "^3.2.1"
+    "styled-normalize": "^8.0.4"
   },
   "keywords": [
     "gatsby"
@@ -45,7 +46,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.15.2"
   }
 }
